# sumry

./: .gitignore  LICENSE  README.md  pyproject.toml
src/sumry/: __init__.py  cli.py  main.py  readers.py  timing.py
src/sumry/formats/: __init__.py  base.py  xlsx.py
