[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sumry"
version = "0.1.0"
description = "A data summarization tool for analyzing various file formats"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Sparkgeo"}
]
keywords = ["data", "summary", "analysis", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "duckdb>=1.1.2",
    "geopandas>=1.0.1",
    "openpyxl>=3.1.5",
    "python-calamine>=0.2.3",
    "rich>=13.0.0",
    "typer>=0.12.5",
]

[project.urls]
Homepage = "https://github.com/sparkgeo/sumry"
Repository = "https://github.com/sparkgeo/sumry"
Issues = "https://github.com/sparkgeo/sumry/issues"

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
]

[project.scripts]
sumry = "sumry.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
